# USD

./: .gitignore  LICENSE  Proposed_structure.md  README.md
.github/: AGENTS.md  copilot-instructions.md
.github/agents/: README.md  generic-subagent.agent.md  planner.agent.md  qa-validator.agent.md  scribe.agent.md  spec-writer.agent.md  worker.agent.md
.github/instructions/: README.md  markdown.instructions.md
.github/processes/: agent-patterns.md  spec-driven-development.md  standard-repo-structure.md
.github/prompts/: README.md  sdd-kickoff.prompt.md  setup-wizard.prompt.md  suggest-awesome-github-copilot-agents.prompt.md  suggest-awesome-github-copilot-instructions.prompt.md  suggest-awesome-github-copilot-prompts.prompt.md
common/: README.md
common/protocol/: README.md  crc16.h  messages.h
demos/: README.md
docs/: README.md
docs/dev/: CHANGELOG.md  KNOWN-ISSUES.md  README.md  ROADMAP.md
docs/dev/FEATURES/: P0-foundation.md  P1-core-motion.md  README.md
docs/guides/: README.md
docs/specs/: ARCHITECTURE.md  DISCOVERY.md  README.md  REQUIREMENTS.md  TASKS.md
firmware/: README.md  platformio.ini
firmware/lib/usd_comms/: README.md
firmware/lib/usd_core/: README.md  library.json  motion_controller.cpp  motion_controller.h  trajectory.cpp  trajectory.h
firmware/lib/usd_drivers/: README.md  idriver.h  istep_generator.h  library.json  mcpwm_stepper.cpp  mcpwm_stepper.h  step_dir_driver.cpp  step_dir_driver.h  (+2 more)
firmware/src/: main.cpp
scripts/: README.md
software/: .coverage  README.md  pyproject.toml  requirements.txt
software/gui/: __init__.py
software/tests/: README.md  conftest.py  test_package.py  test_protocol.py
software/usd/: __init__.py
software/usd/comm/: __init__.py  cobs.py  crc16.py  messages.py
software/usd/core/: __init__.py
software/usd/devices/: __init__.py
software/usd/utils/: __init__.py
(+15 files in other folders)
