[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usd"
version = "0.1.0"
description = "Ultimate Stepper Driver - Python host software for precision motion control"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Camilo Valencia"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
keywords = ["stepper", "motor", "motion", "control", "robotics", "esp32"]

dependencies = [
    "pyserial>=3.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
gui = [
    # Choose one:
    # "PyQt6>=6.4",
    # OR
    # "customtkinter>=5.0",
]

[project.urls]
Homepage = "https://github.com/[your-username]/USD"
Documentation = "https://github.com/[your-username]/USD/tree/main/docs"
Repository = "https://github.com/[your-username]/USD"

[project.scripts]
usd-gui = "gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["usd*", "gui*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=usd --cov-report=term-missing"
